add ruby and node logos, change main screenshot

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ title: About / features
 
         <h3>Language support</h3>
         <p>
-            We currently provide support for Python, R, Julia, Groovy, JavaScript, HTML, Markdown, Latex.
+            We currently provide support for Python, R, Julia, Groovy, JavaScript, Node, Ruby, HTML, Markdown, Latex.
         </p>
 
         <p>
@@ -45,7 +45,9 @@ title: About / features
         <img src="images/languages/html.png" class="img-language-about" alt="HTML logo">
         <img src="images/languages/markdown.png" class="img-language-about" alt="Markdown logo">
         <img src="images/languages/latex.png" class="img-language-about" alt="Latex logo">
-        <img src="images/languages/js.png" class="img-language-about" alt="JavaScript logo">    
+        <img src="images/languages/js.png" class="img-language-about" alt="JavaScript logo" title="JavaScript">   
+        <img src="images/languages/node.png" class="img-language-about" alt="Node logo">   
+        <img src="images/languages/ruby.png" class="img-language-about" alt="Ruby logo" title="Ruby">   
 
         <h3>Notebook format</h3>
 
@@ -112,8 +114,6 @@ title: About / features
         <p>
             The notebook format is a great way to share your work, and Beaker makes it easy to do that. 
         </p>
-
-        <h4>Notebook viewer</h4>
         <p>
             We provide a <a href="http://sharing.beakernotebook.com">notebook viewer</a> that can render a notebook from any URL. We also provide a one-click action to save a copy of your notebook to a GitHub Gist and generate a notebook viewer link.
         </p> 
