--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@ title: The data scientist's lab notebook
 
 <div class="row">
 
-    <div class="col-sm-9 col-sm-push-3">
-        <img src="images/bk4.png" alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class="img-responsive">
+    <div class="col-sm-7 col-sm-push-5">
+        <img src="images/screenshots/d3.png" alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class="img-responsive">
     </div>   
 
-    <div class="col-sm-3 col-sm-pull-9">
+    <div class="col-sm-5 col-sm-pull-7">
 
         <div >
-            <h1 style="margin-top: 0px">The data scientist's laboratory</h1>                        
+            <h1 style="margin-top: 0px;">The data scientist's laboratory</h1>                        
         <img src="images/languages/python.png" class="img-language" alt="Python logo">
         <img src="images/languages/r.png" class="img-language" alt="R logo">
         <img src="images/languages/julia.png" class="img-language" alt="Julia logo">
@@ -21,7 +21,9 @@ title: The data scientist's lab notebook
         <img src="images/languages/html.png" class="img-language" alt="HTML logo">
         <img src="images/languages/markdown.png" class="img-language" alt="Markdown logo">
         <img src="images/languages/latex.png" class="img-language" alt="Latex logo">
-        <img src="images/languages/js.png" class="img-language" alt="JavaScript logo">               
+        <img src="images/languages/js.png" class="img-language" alt="JavaScript logo">     
+        <img src="images/languages/node.png" class="img-language" alt="Node logo">   
+        <img src="images/languages/ruby.png" class="img-language" alt="Ruby logo" title="Ruby">           
         </div>
     </div>
 
