fix feature ordering on narrow screen

--- a/about.html
+++ b/about.html
@@ -66,17 +66,16 @@ title: About / features
         </div>
 
         <div class="row row-feature">
-            <div class="col-sm-6">
-                <img src="images/screenshots/visualizations.png" alt="Screenshot of a Beaker notebook with charts in Matplotlib and ggplot2" class="img-responsive img-feature">
-            </div>
-
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-sm-push-6">
                 <h4 class="h-feature">Visualizations</h4>
                 <p>
                     Visualizations created with libraries like ggplot2 and matplotlib will appear directly in the notebook along with your code.
                 </p> 
             </div>
 
+            <div class="col-sm-6 col-sm-pull-6">
+                <img src="images/screenshots/visualizations.png" alt="Screenshot of a Beaker notebook with charts in Matplotlib and ggplot2" class="img-responsive img-feature">
+            </div>
         </div>
 
         <div class="row row-feature">
@@ -94,11 +93,7 @@ title: About / features
         </div>        
 
         <div class="row row-feature">
-            <div class="col-sm-6">
-                <img src="images/screenshots/organization.png" alt="Screenshot showing the hierarchy of section cells in a Beaker notebook" class="img-responsive img-feature">
-            </div>            
-
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-sm-push-6">
                 <h4 class="h-feature">Organization</h4>
                 <p>
                     Beaker provides several features to help organize your notebooks, for your own convenience or for sharing your work with colleagues.
@@ -107,6 +102,10 @@ title: About / features
                     These features include: collapsible nested sections with headers, lock notebook (hide all code and disable editing), toggle visibility of code and output on individual cells, initialization cells (run automatically on notebook load), and delete all output.
                 </p>
             </div>
+
+            <div class="col-sm-6 col-sm-pull-6">
+                <img src="images/screenshots/organization.png" alt="Screenshot showing the hierarchy of section cells in a Beaker notebook" class="img-responsive img-feature">
+            </div>   
         </div>          
 
         <h3>Exports and sharing</h3>
