--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: The data scientist's lab notebook
 </div>      
 
 <div class="row" align="center">
-    <h3>Example notebooks on the web:</h3>
+    <h3>Example notebooks on the web</h3>
 </div>
 
 <div class="row">    
