change single cell sharing example

--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@ title: About / features
                     Groovy basics</a>
             </div>  
             <div class="col-sm-6">
-                <a href="http://sharing.beakernotebook.com/gist/anonymous/10490366">
-                    <img src="images/screenshots/cell.png" class="img-responsive img-thumbnail" alt="screenshot of single cell shared">
+                <a href="http://sharing.beakernotebook.com/gist/anonymous/11226379">
+                    <img src="images/screenshots/cell2.png" class="img-responsive img-thumbnail" alt="screenshot of single cell shared">
                     Single input/output cell</a>
             </div>              
         </div>              
