--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@ title: About / features
 
         <h2 id="sec6" class="h-about">Two Sigma</h2>
         <p>
-            Beaker was created and is maintained by <a href="http://www.twosigma.com">Two Sigma</a>. 
+            Beaker is maintained by Two Sigma Open Source, an affiliate of <a href="http://www.twosigma.com">Two Sigma</a>. 
         </p>                         
 
     </div>      
