--- a/getting-started.html
+++ b/getting-started.html
@@ -32,7 +32,7 @@ title: Getting started
                 
                 <ul>
                     <li>
-                        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a>
+                        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a> (Look for jdk-7u55-macosx-x64.dmg)
                     </li>
                     <li>
                         Python - <a href="https://store.continuum.io/cshop/anaconda/">Install with Anaconda</a>
@@ -153,7 +153,7 @@ title: Getting started
                 
                 <ul>
                     <li>
-                        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a>
+                        <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html">JDK 7</a> (Look for jdk-7u55-windows-x64.exe or jdk-7u55-windows-i586.exe)
                     </li>
                     <li>
                         Python - <a href="https://store.continuum.io/cshop/anaconda/">Install with Anaconda</a>
