--- a/getting-started.html
+++ b/getting-started.html
@@ -324,7 +324,8 @@ title: Getting started
 
                 <h5>Python</h5>
                 <p>Our Python plugin requires a version of IPython >= 1.0. Install with:</p>
-                <code>sudo apt-get install ipython-notebook </code><br />
+                <code>sudo apt-get install python-pip </code><br />
+                <code>sudo pip install --upgrade ipython[all] jinja2 tornado</code><br />
 
                 <h5>R</h5>
                 <p>Run this in your terminal:</p>
