update Linux instructions

--- a/getting-started.html
+++ b/getting-started.html
@@ -324,6 +324,10 @@ title: Getting started
 
                 <h5>Python</h5>
                 <p>Our Python plugin requires a version of IPython >= 1.0. Install with:</p>
+                <code>sudo apt-get install ipython </code><br /><br />
+                
+                <p>Check your ipython version with <code>ipython --version</code> if it's below 1.0, run the following: </p>
+                
                 <code>sudo apt-get install python-pip </code><br />
                 <code>sudo pip install --upgrade ipython[all] jinja2 tornado</code><br />
 
@@ -348,7 +352,7 @@ title: Getting started
         <hr />
         <h1 id="sec2">Using Beaker</h1>
         <p>
-            After installation, just double click <strong>beaker.command</strong>
+            After installation, just double click <strong>beaker.command</strong> (in Linux, you may need to call ./beaker.command from a terminal)
         </p>     
         <p>
             Start by checking out the <strong>tutorial notebook</strong>. Find it under the 'Help' menu at the top of the page.
