--- a/getting-started.html
+++ b/getting-started.html
@@ -324,7 +324,7 @@ title: Getting started
 
                 <h5>Python</h5>
                 <p>Our Python plugin requires a version of IPython >= 1.0. Install with:</p>
-                <code>sudo apt-get install ipython </code><br /><br />
+                <code>sudo apt-get install ipython-notebook </code><br /><br />
                 
                 <p>Check your ipython version with <code>ipython --version</code> if it's below 1.0, run the following: </p>
                 
