add color to get beta box

--- a/index.html
+++ b/index.html
@@ -133,30 +133,34 @@ title: The data scientist's lab notebook
 <div class="container-fluid science-background">
 
     <div class="row">
-        <div align="center">
-            <h3>Get the beta</h3>
-            <p>You'll receive a download link when you confirm your email.</p>
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div align="center" class="alert-info">
+                <h3>Get the beta</h3>
+                <p>You'll receive a download link when you confirm your email.</p>
 
-            <div id="mc_embed_signup">
-                <form action="http://twosigma.us3.list-manage.com/subscribe/post?u=d05838b85c905bc618b25e5a9&amp;id=6b3010163c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup">
+                    <form action="http://twosigma.us3.list-manage.com/subscribe/post?u=d05838b85c905bc618b25e5a9&amp;id=6b3010163c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
-                    <div class="mc-field-group">
-                        <label for="mce-EMAIL"></label>
-                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"> <input type="submit" value="Get beta" name="subscribe" id="mc-embedded-subscribe" class="button">
-                    </div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_d05838b85c905bc618b25e5a9_6b3010163c" value=""></div>
-                    <div class="clear"></div>
-                </form>
-            </div>
+                        <div class="mc-field-group">
+                            <label for="mce-EMAIL"></label>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address"> <input type="submit" value="Get beta" name="subscribe" id="mc-embedded-subscribe" class="button">
+                        </div>
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>
+                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_d05838b85c905bc618b25e5a9_6b3010163c" value=""></div>
+                        <div class="clear"></div>
+                    </form>
+                </div>
 
-            <p>
-                <a href="https://github.com/twosigma/beaker-notebook">Source on GitHub</a>
-            </p>
-        </div> 
+                <p>
+                    <a href="https://github.com/twosigma/beaker-notebook">Source on GitHub</a>
+                </p>
+            </div> 
+    </div>
+        <div class="col-md-4"></div>
     </div>
     
     <br />
