--- a/about.html
+++ b/about.html
@@ -25,6 +25,9 @@ title: About / features
 
         <p>Beaker is a code notebook that allows you to analyze, visualize, and document data using multiple programming languages. Beaker's plugin-based polyglot architecture enables you to seamlessly switch between languages in your documents and add support for your favorite languages that we've missed.</p>
         <br />
+        
+        <p>Beaker is currently in early beta release and is not yet production quality.  We find it useful and we hope you do too, but there are bugs and the user interface and APIs are going to change.  We love to improve it and we look forward to hearing your feedback.</p>
+        <br />
 
         <img src="images/bk4.png" alt="Screenshot of two Beaker notebooks with Python, R, and HTML code" class="img-responsive">
         <h2 id="sec2" class="h-about">Features</h2>
