--- a/getting-started.html
+++ b/getting-started.html
@@ -30,7 +30,7 @@ title: Getting started
             <div class="tab-pane active" id="mac">
                 <h3>Current Version</h3>
                 
-                <p>Beaker is currently at 0.52.4-beta.  This is an early beta release and early beta release and is not yet production quality. We find it useful and we hope you do too, but there are bugs and the user interface and APIs are going to change. We love to improve it and we look forward to hearing your feedback.
+                <p>Beaker is currently at 0.52.4-beta.  This is an early beta release and is not yet production quality. We find it useful and we hope you do too, but there are bugs and the user interface and APIs are going to change. We love to improve it and we look forward to hearing your feedback.
                 </p>
                 
                 <h3>Prerequisites</h3>
