tweak tagline and move it to a template

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: The data scientist's lab notebook
 
         <div class="row large-font">
             <div class="col-md-3">
-                <p>Beaker is a code notebook that allows you to analyze, visualize, and document data using multiple programming languages. Beaker's plugin-based polyglot architecture enables you to seamlessly switch between languages in your documents and add support for your favorite languages that we've missed.</p>
+                {% include tagline.html %}
 
                 <div align="center">
                     <p>
