--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ title: About / features
 
     <div class="col-sm-9 col-sm-pull-3">
 
-        <p>Beaker is a code notebook that allows you to analyze, visualize, and document data using multiple programming languages. Beaker's plugin-based polyglot architecture enables you to seamlessly switch between and combine languages in your documents.</p>
+        {% include tagline.html %}
         <br />
         
         <p>Beaker is currently in early beta release and is not yet production quality.  We find it useful and we hope you do too, but there are bugs and the user interface and APIs are going to change.  We love to improve it and we look forward to hearing your feedback.</p>
