Change index title from 'lab notebook' to 'laboratory'

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The data scientist's lab notebook
+title: The data scientist's laboratory
 ---
 
 <div class="chemicals-background">
